--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>conSenseAutomation</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -14,7 +15,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <parallel>true</parallel>
+        <parallel>false</parallel>
         <ReportName>conSense Cucumber Report</ReportName>
     </properties>
 
